--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
   "author": "Ivan Lim",
   "license": "MIT",
   "dependencies": {
-    "apollo-server-express": "^1.3.2",
+    "apollo-server-express": "^2.0.0-rc.12",
     "body-parser": "^1.18.2",
     "casual": "^1.5.19",
     "express": "^4.16.2",
     "graphql": "^0.12.3",
+    "graphql-tag": "^2.9.2",
     "graphql-tools": "^2.18.0",
     "lodash": "^4.17.4",
     "sequelize": "^4.32.1",
-    "sqlite": "^2.9.1"
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
